<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">The page could not be opened because the URL is invalid.</string>
    <string name="httpErrorUnsupportedScheme">The protocol is not supported.</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="selectTextMode">Select text...</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="certificate_3lm">MIIEbTCCA1WgAwIBAgIJAJ3tD9oyIhmaMA0GCSqGSIb3DQEBBQUAMGwxCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEMMAoGA1UEChMDM0xNMRQwEgYDVQQLEwszTE0gUm9vdCBDQTEUMBIGA1UEAxMLM0xNIFJvb3QgQ0EwIBcNMTAxMTIwMDIxOTQwWhgPMjA2MDExMDcwMjE5NDBaMIGMMQswCQYDVQQGEwJVUzELMAkGA1UECBMCQ0ExFjAUBgNVBAcTDU1vdW50YWluIFZpZXcxDDAKBgNVBAoTAzNMTTEkMCIGA1UECxMbM0xNIEFwcGxpY2F0aW9uIENlcnRpZmljYXRlMSQwIgYDVQQDExszTE0gQXBwbGljYXRpb24gQ2VydGlmaWNhdGUwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCxfvkx3EmdzvIqFtqkBVg1R34uLUq7p58UV6Hh1EfOEnma69cNmfDKgrQKlcQcHRjOl55V6ojJMOUlR5f6ywF3VGl36aZ70XGEgH0eSGcnMwyMzaLbhiR2Hgk9fMNNyGh57B2mG5WpTIKnlr4jVxFJMqHskA7fv4GtPZSNZ+Xho7LZY0gm0q6uQCi29p6/L48gHbyrpjAkLFXVjh/pev6+fNNYlbzdpHBdyAN9KCatsjld8HXTh5uk55PNGmrzkr/G6FbE1iMQaJoqZUTU3mw2B2zLl4lbq0tmdMtAgnHoefL8znOIWH3knIOPrGXLNBAfJslSls7yO7OH8kCKrzuLAgMBAAGjge4wgeswCQYDVR0TBAIwADARBglghkgBhvhCAQEEBAMCBBAwCwYDVR0PBAQDAgbAMB0GA1UdDgQWBBRG4hoEpXFa6jFThwX0Vy6W+i2aJzCBngYDVR0jBIGWMIGTgBTadY1QuOklODIhVWluRXg1NBvEj6FwpG4wbDELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MQwwCgYDVQQKEwMzTE0xFDASBgNVBAsTCzNMTSBSb290IENBMRQwEgYDVQQDEwszTE0gUm9vdCBDQYIJALX3Ed+KfxKgMA0GCSqGSIb3DQEBBQUAA4IBAQASDyCYK1PmVvDScbnD3pPmxNtOCuvmSFNVcxMuPb5PpplFVkJEs4Jdv+3M59tez0K8t3muu746lpiNCbW9MlJG7CjaoUz5tbB5cAj4oHrCzhbaMgRDUQxwluHimFdboq3Y4FVi/zcGSIVvGxuAM48br140EKjqKNzd6+jTN6lglFq9TnP/bvwTpXwQy7cneidLvWFu6eNEOng+FtEb83bDvbqNoFEhA0UDg6IF3BVHQLJkUy3rMJTcudx6aYRk0iE4npHIw8gTBypYdgPFz05nLC3sEBIkdR5Mag4JeTRYg+RNReLYIcnXG7PsU0pZFv1b8XaxUugJmO7EhcU5UQrC</string>
    <string name="debug_certificate_3lm">MIIEqDCCA5CgAwIBAgIJAJNurL4H8gHfMA0GCSqGSIb3DQEBBQUAMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTAeFw0wODAyMjkwMTMzNDZaFw0zNTA3MTcwMTMzNDZaMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTCCASAwDQYJKoZIhvcNAQEBBQADggENADCCAQgCggEBANaTGQTexgskse3HYuDZ2CU+Ps1s6x3i/waMqOi8qM1r03hupwqnbOYOuw+ZNVn/2T53qUPn6D1LZLjk/qLT5lbx4meoG7+yMLV4wgRDvkxyGLhG9SEVhvA4oU6Jwr44f46+z4/Kw9oe4zDJ6pPQp8PcSvNQIg1QCAcy4ICXF+5qBTNZ5qaU7Cyz8oSgpGbIepTYOzEJOmc3Li9kEsBubULxWBjf/gOBzAzURNps3cO4JFgZSAGzJWQTT7/emMkod0jb9WdqVA2BVMi7yge54kdVMxHEa5r3b97szI5p58ii0I54JiCUP5lyfTwE/nKZHZnfm644oLIXf6MdW2r+6R8CAQOjgfwwgfkwHQYDVR0OBBYEFEhZAFY9JyxGrhGGBaR0GawJyowRMIHJBgNVHSMEgcEwgb6AFEhZAFY9JyxGrhGGBaR0GawJyowRoYGapIGXMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbYIJAJNurL4H8gHfMAwGA1UdEwQFMAMBAf8wDQYJKoZIhvcNAQEFBQADggEBAHqvlozrUMRBBVEY0NqrrwFbinZaJ6cVosK0TyIUFf/azgMJWr+kLfcHCHJsIGnlw27drgQAvilFLAhLwn62oX6snb4YLCBOsVMR9FXYJLZW2+TcIkCRLXWG/oiVHQGo/rWuWkJgU134NDEFJCJGjDbiLCpe+ZTWHdcwauTJ9pUbo8EvHRkU3cYfGmLaLfgn9gP+pWA7LFQNvXwBnDa6sppCccEX31I828XzgXpJ4O+mDL1/dBd+ek8ZPUP0IgdyZm5MTYPhvVqGCHzzTy3sIeJFymwrsBbmg2OAUNLEMO6nwmocSdN2ClirfxqCzJOLSDE4QyS9BAH6EhY6UFcOaE0=</string>
    <string name="sd_encrypt_notify_title">SD card encryption required</string>
    <string name="sd_encrypt_notify_text">Click here to enable</string>
    <string name="ext_media_ro_notification_title">SD card is read-only (not encrypted)</string>
    <string name="ext_media_ro_notification_message">For write access, format to encrypt SD</string>
    <string name="data_encrypt_notify_title">Internal data encryption enabled</string>
    <string name="data_encrypt_convert_diag">Decrypting...</string>
    <string name="disable_notify_title">IT disabled:</string>
    <string name="it_notify_text">Policy enforced by IT</string>
    <string name="permission_notify_title">IT blocked:</string>
    <string name="bootlock_notification_bar">Unable to start:</string>
    <string name="bootlock_notify_title">%s : locked</string>
    <string name="bootlock_notify_text">IT policies must first be loaded</string>
    <string name="bt_notify_title">IT disabled Bluetooth</string>
    <string name="camera_notify_title">IT disabled camera</string>
    <string name="install_notify_title">IT blocked install:</string>
    <string name="uninstall_notify_title">IT blocked uninstall:</string>
    <string name="wifi_notify_title">IT disabled Wi-Fi</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_tether_apndata" />
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="default_wallpaper_component">@null</string>
    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="gsm_alphabet_default_charset" />
    <string name="config_useragentprofile_url" />
    <string name="config_isoImagePath" />
    <string name="config_ntpServer">pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="config_geofenceProvider">com.qualcomm.services.location.addon</string>
    <string name="month_long_standalone_january">January</string>
    <string name="month_long_standalone_february">February</string>
    <string name="month_long_standalone_march">March</string>
    <string name="month_long_standalone_april">April</string>
    <string name="month_long_standalone_may">May</string>
    <string name="month_long_standalone_june">June</string>
    <string name="month_long_standalone_july">July</string>
    <string name="month_long_standalone_august">August</string>
    <string name="month_long_standalone_september">September</string>
    <string name="month_long_standalone_october">October</string>
    <string name="month_long_standalone_november">November</string>
    <string name="month_long_standalone_december">December</string>
    <string name="month_long_january">January</string>
    <string name="month_long_february">February</string>
    <string name="month_long_march">March</string>
    <string name="month_long_april">April</string>
    <string name="month_long_may">May</string>
    <string name="month_long_june">June</string>
    <string name="month_long_july">July</string>
    <string name="month_long_august">August</string>
    <string name="month_long_september">September</string>
    <string name="month_long_october">October</string>
    <string name="month_long_november">November</string>
    <string name="month_long_december">December</string>
    <string name="month_medium_january">Jan</string>
    <string name="month_medium_february">Feb</string>
    <string name="month_medium_march">Mar</string>
    <string name="month_medium_april">Apr</string>
    <string name="month_medium_may">May</string>
    <string name="month_medium_june">Jun</string>
    <string name="month_medium_july">Jul</string>
    <string name="month_medium_august">Aug</string>
    <string name="month_medium_september">Sep</string>
    <string name="month_medium_october">Oct</string>
    <string name="month_medium_november">Nov</string>
    <string name="month_medium_december">Dec</string>
    <string name="month_shortest_january">J</string>
    <string name="month_shortest_february">F</string>
    <string name="month_shortest_march">M</string>
    <string name="month_shortest_april">A</string>
    <string name="month_shortest_may">M</string>
    <string name="month_shortest_june">J</string>
    <string name="month_shortest_july">J</string>
    <string name="month_shortest_august">A</string>
    <string name="month_shortest_september">S</string>
    <string name="month_shortest_october">O</string>
    <string name="month_shortest_november">N</string>
    <string name="month_shortest_december">D</string>
    <string name="day_of_week_long_sunday">Sunday</string>
    <string name="day_of_week_long_monday">Monday</string>
    <string name="day_of_week_long_tuesday">Tuesday</string>
    <string name="day_of_week_long_wednesday">Wednesday</string>
    <string name="day_of_week_long_thursday">Thursday</string>
    <string name="day_of_week_long_friday">Friday</string>
    <string name="day_of_week_long_saturday">Saturday</string>
    <string name="day_of_week_medium_sunday">Sun</string>
    <string name="day_of_week_medium_monday">Mon</string>
    <string name="day_of_week_medium_tuesday">Tue</string>
    <string name="day_of_week_medium_wednesday">Wed</string>
    <string name="day_of_week_medium_thursday">Thu</string>
    <string name="day_of_week_medium_friday">Fri</string>
    <string name="day_of_week_medium_saturday">Sat</string>
    <string name="day_of_week_short_sunday">Su</string>
    <string name="day_of_week_short_monday">Mo</string>
    <string name="day_of_week_short_tuesday">Tu</string>
    <string name="day_of_week_short_wednesday">We</string>
    <string name="day_of_week_short_thursday">Th</string>
    <string name="day_of_week_short_friday">Fr</string>
    <string name="day_of_week_short_saturday">Sa</string>
    <string name="day_of_week_shortest_sunday">S</string>
    <string name="day_of_week_shortest_monday">M</string>
    <string name="lockscrenn_glanceview_missed_call">missed call</string>
    <string name="lockscrenn_glanceview_new_messages">new messages</string>
    <string name="lockscrenn_glanceview_battery_charging">charging</string>
    <string name="lockscrenn_glanceview_alarm_remained">remained</string>
    <string name="checkbox_description">Do not show again</string>
    <string name="gesture_guidance_quickcommand">"Quick
Command"</string>
    <string name="gesture_guidance_textselection">"Text
Selection"</string>
    <string name="gesture_guidance_back">Back</string>
    <string name="gesture_guidance_menu">Menu</string>
    <string name="IDS_BR_BODY_SWITCH_WINDOWS">Multiscreen</string>
    <string name="mw_split_popup_text1">Select application</string>
    <string name="mw_split_popup_text2">Close application</string>
    <string name="mw_split_popup_text3">Switch windows</string>
    <string name="mw_split_popup_text4">Drag and drop</string>
</resources>