<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_back" android:layout_width="76.0dip" android:layout_height="90.0dip" android:text="@string/gesture_guidance_back" android:lines="2" android:drawableTop="@drawable/hover_g_ic_back" android:drawablePadding="-2.0dip" />
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_quickcommand" android:layout_width="76.0dip" android:layout_height="90.0dip" android:text="@string/gesture_guidance_quickcommand" android:lines="2" android:drawableTop="@drawable/hover_g_ic_quick" android:drawablePadding="-2.0dip" android:layout_toRightOf="@id/tv_back" android:layout_alignTop="@id/tv_back" />
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_textselection" android:layout_width="76.0dip" android:layout_height="90.0dip" android:text="@string/gesture_guidance_textselection" android:lines="2" android:drawableTop="@drawable/hover_g_ic_text" android:drawablePadding="-2.0dip" android:layout_toRightOf="@id/tv_quickcommand" android:layout_alignTop="@id/tv_back" />
    <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_menu" android:layout_width="76.0dip" android:layout_height="90.0dip" android:text="@string/gesture_guidance_menu" android:lines="2" android:drawableTop="@drawable/hover_g_ic_menu" android:drawablePadding="-2.0dip" android:layout_toRightOf="@id/tv_textselection" android:layout_alignTop="@id/tv_back" />
</RelativeLayout>
