<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="570.0dip" android:layout_height="fill_parent">
        <FrameLayout android:background="@drawable/tw_dialog_top_medium_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="65.0dip">
                <TextView android:textSize="22.0sp" android:textColor="@color/mw_popup_color1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:text="@string/IDS_BR_BODY_SWITCH_WINDOWS" android:shadowColor="#ffffffff" android:shadowDy="-1.0" android:shadowRadius="0.3" />
            </LinearLayout>
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/tw_dialog_middle_holo_light" android:paddingLeft="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <LinearLayout android:orientation="vertical" android:paddingRight="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_menu_split_view" />
                        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/mw_popup_color1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:text="@string/mw_split_popup_text1" />
                    </LinearLayout>
                    <TextView android:textSize="20.0sp" android:textColor="@color/mw_popup_color1" android:id="@id/sub_text1" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="34.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_menu_close" />
                        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/mw_popup_color1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:text="@string/mw_split_popup_text2" />
                    </LinearLayout>
                    <TextView android:textSize="20.0sp" android:textColor="@color/mw_popup_color1" android:id="@id/sub_text2" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="34.0dip">
                        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/menu_popup_ic_switch_windows_holo_light" />
                        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/mw_popup_color1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:text="@string/mw_split_popup_text3" />
                    </LinearLayout>
                    <TextView android:textSize="20.0sp" android:textColor="@color/mw_popup_color1" android:id="@id/sub_text3" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/mw_popup_color1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="34.0dip" android:text="@string/mw_split_popup_text4" />
                    <TextView android:textSize="20.0sp" android:textColor="@color/mw_popup_color1" android:id="@id/sub_text4" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <TextView android:textSize="20.0sp" android:textColor="@color/mw_popup_color1" android:id="@id/sub_text5" android:paddingLeft="40.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="9.0dip" android:src="@drawable/split_screen_tutorial" />
                </LinearLayout>
            </ScrollView>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="52.0dip" android:layout_weight="0.0">
                <ImageView android:background="@color/mw_popup_color3" android:layout_width="522.0dip" android:layout_height="1.0dip" android:layout_marginBottom="9.0dip" />
                <CheckBox android:textSize="20.0sp" android:textColor="@color/mw_popup_color1" android:id="@id/mw_check" android:paddingLeft="38.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:layout_marginBottom="10.0dip" android:button="@drawable/tw_btn_check_holo_light" android:text="@string/checkbox_description" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout android:background="@drawable/tw_dialog_bottom_medium_holo_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
            <LinearLayout android:paddingLeft="5.0dip" android:paddingTop="6.0dip" android:paddingRight="5.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="65.0dip">
                <Button android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/bt_ok" android:background="@drawable/tw_popup_button_background_holo_light" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/ok" android:layout_weight="1.0" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
